fix: header contents shifts when scroll bar disappears

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -19,6 +19,9 @@
 }
 a.router-link-active {
   color: black;
+  }
+html {
+overflow-y: scroll;
 }
 .q-card-title { 
   color: $primary;
